--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "better-scroll": "^1.15.0",
     "fastclick": "^1.0.6",
     "vue": "^2.5.2",
